# openclaw-mem

./: .dockerignore  .gitignore  ACKNOWLEDGEMENTS.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  PRODUCT_POSITIONING.md  PROGRESS-RUN-A.md  PROGRESS-RUN-B.md  QUICKSTART.md  README.md  RUN-A-REPORT.md  RUN-B-REPORT.md  SESSION_SUMMARY_2026-02-05.md  SESSION_SUMMARY_PHASE4.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
benchmarks/: README.md  docs_memory_query_set.v1.jsonl  importance_grading_set.v1.jsonl  plain_vanilla_context_pack_benchmark.py  trust_policy_synthetic_proof.py
docs/: 2026-03-27_sakura-weiji-hook-automation-blade-map.md  2026-03-27_sakura-weiji-hook-automation-closure.md  2026-03-31_graph-consumption-closure.md  2026-03-31_graph-query-plane-closure.md  2026-03-31_importance-grading-benchmark-closure.md  2026-03-31_optimize-shadow-loop-closure.md  2026-04-06_writeback-recall-policy-loop-closure.md  2026-04-18_self-model-sidecar-activation-and-docs-receipt.md  2026-04-18_self-model-sidecar-adjudication-v1-receipt.md  2026-04-18_self-model-sidecar-control-plane-v1-receipt.md  2026-04-18_self-model-sidecar-governance-hardening-receipt.md  2026-04-18_self-model-sidecar-msp-implementation-receipt.md  2026-04-20_self-model-sidecar-72h-soak-automation-receipt.md  2026-04-20_self-model-sidecar-phase4-9-runtime-loop-receipt.md  2026-04-24_self-model-sidecar-productization-slice-receipt.md  2026-04-27_session-store-maintenance-hardening-receipt.md  2026-05-02_docs-cold-lane-first-class-ingest-fix-closure.md  2026-05-02_docs-cold-lane-first-class-ingest-fix-plan.md  2026-05-02_self-curator-controller-receipt.md  2026-05-02_self-curator-v0-receipt.md  2026-05-02_self-curator-v1-apply-receipt.md  2026-05-08_memory-api-parity-closure.md  (+94 more)
(+661 files in other folders)
