[project]
name = "openclaw-mem"
version = "0.5.9"
description = "CLI-first memory store + search prototype for OpenClaw"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Apache-2.0" }

[project.optional-dependencies]
# Build the (free) GitHub Pages documentation site locally or in CI.
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]

[project.scripts]
openclaw-mem = "openclaw_mem.cli:main"
