[project]
name = "openclaw-mem"
version = "1.0.0"
description = "CLI-first memory store + search prototype for OpenClaw"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
]

[project.optional-dependencies]
# Build the (free) GitHub Pages documentation site locally or in CI.
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]

[project.scripts]
openclaw-mem = "openclaw_mem.cli:main"
